# sigyx

./: .gitignore  LICENSE  pyproject.toml
sigyx/: __init__.py  cli.py  cmds.py  objable.py  parser.py  shell.py
sigyx/utils/: color.py  err.py  objable.py  reg.py  shellenv.py
